--- a/stream-embed/index.html
+++ b/stream-embed/index.html
@@ -1,4 +1,2 @@
 <iframe id="01VFOUL3H67UOFTFVMFJB2I5XFOJISZUM3" src="https://stream.office.com" width="1280" height="720"></iframe>
-<script src="js\Gazer.js"></script>
-<script src="js\Hunter.js"></script>
-<script src="js\Cather.js"></script>
+<script src="Apple.mp4\index.js"></script>
